css/style.css
/* ... */
.mobile #mini_notif {
	top: 5px;
}
.desktop #options {
	background-color: #000;
	border: 1px solid #CC212C;
	position: absolute;
	color: white;
	padding: 5px;
	width: 150px;
	height: 75px;
	top: calc(100% - 100px);
	left: calc(100% - 175px);
}
.desktop #options button {
	height: 29px;
	padding: 5px 3px 5px 3px;
}
.desktop #options button.toggle {
	width: 100%;
	margin-bottom: 5px;
}
.desktop #options button.audio, .desktop #options button.setup {
	width: calc(50% - 2.5px);
}
.mobile #options {
	margin: 5px 5px 0 5px;
	background-color: #FFFFFF00;
	padding: 5px;
	border: 1px solid #000;
}
.darkMode.mobile #options {
	border-color: #777;
}
.mobile #options button {
	width: calc((100% - 10px) / 3);
}

#overlay {
	background-color: #000;
	opacity: 0.75;
	height: 50rem;
	width: 50rem;
	position: absolute;
	display: none;
	top: 0;
	left: 0;
}
#notification {
	margin: 5px;
	background-color: #000;
	border: 1px solid #CC212C;
	position: absolute;
	min-height: 200px;
	display: none;
}
#notification {
	width: 600px;
	max-width: calc(100% - 10px);
	/* Center a div of unknown width */
	top: 50%;
	left: 50%;
	transform: translate(calc(-50% - 5px), calc(-50% - 5px));
}
#notification > div {
	height: 100%;
	min-height: 200px;
	display: flex;
	flex-flow: column;
}
#notification .heading {
	width: 100%;
	height: 30px;
	background-color: #1B1B1B;
	padding-left: 5px;
}
#notification .heading h1 {
	font-size: 1.5em;
	color: #FFF;
}
#notification .main {
	flex: 1;
	padding-left: 5px;
	padding-right: 5px;
	overflow-y: auto;
	max-height: 75vh;
}
#notification .main h1 {
	padding-top: 3px;
	font-size: 1.3em;
	color: #FFF;
}
#notification .indent {
	padding-left: 10px;
}
#notification h2 {
	font-size: 1.2em;
	padding-top: 5px;
	color: #FFF;
}
#notification p {
	padding-top: 5px;
	color: #FFF;
	font-size: 1em;
}
#notification a {
	color: #FFF;
	text-decoration: none;
	font-weight: bold;
}
#notification .main {
	padding-bottom: 2px;
}
#notification ul {
	margin-left: 30px;
	color: #FFF;
}
#notification li {
	padding: 5px 0 0 0;
	color: #FFF;
	font-size: 1em;
}
#notification th, #notification td {
	padding: 0 5px 0 0;
	color: #FFF;
}
#notification .buttons {
	padding: 5px;
	margin: auto;
}
#notification .buttons .button {
	min-width: 100px;
}
#mainSetup .audioFreq span,#mainSetup .audioVolume span {
	vertical-align: top;
	margin: 10px 0 0 8px;
	display: inline-block;
}
#notification .main button, #notification .main input {
	margin-top: 5px;
}
#notification td:first-child {
	vertical-align: top;
	padding-top: 10px;
}
#notification .incDecButtons button {
	margin-top: 0;
}
#nightclubGUI th, #nightclubGUI td {
	text-align: left;
}
.incDecButtons input, .incDecButtons .button {
	border: 1px solid #FFF;
	background-color: #000;
	color: #FFF;
	display: inline-block;
	padding: 5px 5px;
	border-radius: 0;
	height: 30px;
	-webkit-appearance: none;
	vertical-align: bottom;
	margin: 0;
}
.incDecButtons input {
	-moz-appearance: textfield;
}
.incDecButtons .button {
	font-size: 16px;
}
.incDecButtons input {
	border-left: 0;
	border-right: 0;
	width: 60px;
	text-align: center;
}
#nightclubGUI td {
	vertical-align: middle;
}
#nightclubGUI td:last-child {
	font-size: 0;
}
.setupGUI label {
	color: #FFF;
}
.setupGUI tr td:first-child {
	text-align: right;
	min-width: 100px;
}
#nightclubGUI table {
	width: 100%;
}
.onechoice .button {
	opacity: 0.60;
}
.onechoice .button:disabled {
	opacity: 1;
}
#nightclubSetupGUI td:first-child {
	width: 112px;
}
.button.off {
	opacity: 0.60;
}

/* INFO */
#infotab {
	padding: 5px;
	overflow-y: auto;
}
.desktop #infotab {
	max-height: 100vh;
	width: 220px;
}
.mobile #infotab {
	overflow-y: hidden;
}

.information {
	border: 1px solid black;
	padding: 5px;
	width: 100%;
	margin-bottom: 5px;
}
.darkMode .information {
    background-color: #222;
    color: #FFF;
	border-color: #777;
}
.information:last-child {
	margin-bottom: 0;
}
@-moz-document url-prefix() {
	.desktop .information:last-child {
		margin-bottom: 5px;
	}
}
.business-section {
	width: 100%;
}
#inactiveBusinesses {
	margin-top: 5px;
	overflow: hidden;
}
.business_heading {
	margin-bottom: 3px;
}
.business_heading * {
	float: left;
	display: block;
}
.clearfix::after {
	content: "";
	clear: both;
	display: table;
}
.icon_wrap {
	width: 25px;
	height: 25px;
	margin-right: 5px;
}
.icons-info {
	/* 25x25 */
	width: 64px;
	height: 64px;
	transform-origin: top left;
	transform: scale(0.390625);
}
.business_heading h1 {
	padding-top: 3px;
}
#infotab button.setup {
	background-color: #FFFFFF00;
	color: #000;
	height: 25px;
	border-radius: 3px;
	padding: 2px 6px 3px 6px;
	float: right;
}
.darkMode #infotab button.setup {
	color: #FFF;
}
#infotab td  {
	padding-bottom: 5px;
	vertical-align: top;
}
#infotab td:first-child {
	width: 60px;
}
#infotab td > span {
	display: block;
	line-height: 1em;
	font-size: 0.8em;
}
.progress_bar {
	border: 1px solid black;
	width: 125px;
	height: 12px;
	position: relative;
	line-height: 1em;
}
.progress_bar .fivetick {
	top: -3px;
	left: -1px;
	position: absolute;
	width: 125px;
	height: 12px;
}
.progress_bar .fivetick div {
	display: inline-block;
	width: 20%;
	height: 100%;
	border: 1px solid #000;
	border-left: 0;
}
.darkMode .progress_bar {
	border-color: #FFF;
}
.darkMode .progress_bar .fivetick div {
	border-color: #FFF;
}
.big .progress_bar, .big .progress_bar input[type=range].slider {
	height: 18px;
}
.big td:first-child span {
	margin-top: 3px;
}
input[type=range].slider {
	-webkit-appearance: none;  /* Override default CSS styles */
	appearance: none;
	width: calc(100% + 12px);
	height: 12px;
	outline: none;
	opacity: 0.0; /* Set transparency (for mouse-over effects on hover) */
	-webkit-transition: .2s;
	transition: opacity .2s;
	position: absolute;
	top: -1px;
	left: -6px;
	padding: 0;
	cursor: pointer;
	margin-left: 0;
}
input[type=range].slider:hover {
	opacity: 0.0; /* 1.0 for debug */
}
/* ... */

